tests/baselines/reference/parserNoASIOnCallAfterFunctionExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.ts(1,9): error TS2554: Expected 0 arguments, but got 1.


==== tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.ts (1 errors) ====
    var x = function () { }
            ~~~~~~~~~~~~~~~
    (<any>window).foo;
    ~~~~~~~~~~~~~
!!! error TS2554: Expected 0 arguments, but got 1.
    